webapp/src/components/swipes-card/swipes-card.scss
@import "../global-styles/mixins";
@import "../global-styles/vars";

$dotWrapper: 50px;
$imgWrapper: 50px;

.sw-card-list {
  @include size(100%, auto);
  background-color: white;
  border-radius: 6px;
  box-shadow: $swipes-shadow-one;
  min-height: 50px;
  line-height: 1;
  overflow: hidden;
  max-width: 600px;
  margin: 100px auto;

  &__header {
    @include size(100%, 60px);
    background-color: white;
    position: relative;
    border-bottom: 2px solid $deepBlue-5;

    &--title {
      @include flex(center, flex-start)
    }

    &--title & {
      &:after {
        content: '';
        @include size(calc(100% - 18px), 1px);
        position: absolute;
        left: 9px;
        bottom: 0;
        background-color: $deepBlue-80;
      }

      &--left-image & {
        &__title {
          margin-left: 0;
        }
      }

      &__image {
        @include size(60px, 60px);
        @include flex(center, center);

        &--left {

          img {
            @include size(25px, 25px);
            // border-radius: 50%;
          }
        }

        &--right {
          @include size(50px, 50px);
        }
      }

      &__title {
        margin-left: 18px;
        font-weight: 700;
        letter-spacing: .9px;
        color: $deepBlue-100;
        font-size: 15px;

        &:first-letter {
          text-transform: uppercase;
        }
      }
    }

    &--tabs {
      @include flex(center, center);
    }

    &--tabs & {
      &__tab {
        @include size(100%, 100%);
        @include flex(center, center);
        color: $deepBlue-40;
        font-size: 15px;
        font-weight: 700;
        letter-spacing: .9px;
        position: relative;
        transform: translateY(1px);
        transition: .1s;
        user-select: none;

        &:not(:last-of-type) {


          &:after {
            $sepHeight: 40%;
            content: "";
            position: absolute;
            right: 0;
            top: (100% - $sepHeight) / 2;
            width: 1px;
            height: $sepHeight;
            background-color: $deepBlue-10;
          }
        }

        &--active {
          color: $blue-100;
          transition: .1s;
        }
      }
    }
  }

  &__list {

    &--item {
      &:not(:last-child) {
        // border-bottom: 1px solid $deepBlue-5;
      }
    }

    &--padding {
      padding-bottom: 15px;
    }
  }

  &__action {
    @include size(100%, 30px);
    @include flex(center, center);
    position: relative;
    border-top: 1px solid $deepBlue-5;

    &:hover & {

      &__label {
        opacity: 1;
      }
    }

    &__label {
      @include size(calc(100% - 50px), 100%);
      @include flex(center, flex-end);
      font-size: 11px;
      font-weight: 500;
      color: $deepBlue-40;
      opacity: 0;
    }

    &__icon {
      @include size(50px, 30px);
      @include flex(center, center);

      svg {
        width: 20px;
        fill: $deepBlue-40
      }
    }
  }
}

tabSlider {
  height: 2px;
  background-color: $blue-100;
  position: absolute;
  left: 0;
  bottom: -2px;
  transition: .3s ease-in-out;
}

.swipes-card {
  @include size(100%, auto);
  background-color: white;
  border-radius: 6px;
  box-shadow: $swipes-shadow-one;
  min-height: 70px;
  line-height: 1;
  overflow: hidden;

  .description-container {
    width: 100%;
    padding-bottom: 15px;
  }

  a.link {
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }

  &__item {
    min-height: 70px;
    line-height: 1;
    @include size(100%, auto);
    @include flex(center, center, column !important);
    background-color: white;
  }

  &__header {
    @include size(100%);
    @include flex(center, center)
    min-height: 60px;

    &__dot {
      @include size(40px);
      @include flex(center, center);

      &:empty {
        @include size(20px);
        // background-color: red;
      }

      > * {
        @include size(6px, 6px); //hack for centering the dot, some issue with no actions
      }
    }

    &__content {
      @include size(calc(100% - 42px));
      @include flex(flex-start, center, column);
      padding-right: 18px;

      &--no-subtitle & {
        &--title {
          white-space: normal;
          display: -webkit-box;
          max-height: 36px;      /* fallback */
          -webkit-line-clamp: 2; /* number of lines to show */
          -webkit-box-orient: vertical;
          margin-top: 0;
        }

        &--subtitle {
          display: none;
        }
      }

      &--title {
        @include size(100%);
        color: $deepBlue-100;
        font-size: 15px;
        font-weight: 400;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        line-height: 17px;
        margin-top: -4px;
      }

      &--subtitle {
        @include size(100%);
        color: $deepBlue-40;
        font-size: 12px;
        font-weight: 400;
        letter-spacing: .3px;
        line-height: 12px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        margin-top: 5px;
      }
    }

    &__image {
      @include size(50px, 100%);
      @include flex(center, center);

      img {
        @include size(30px, 30px);
      }

      &:empty {
        display: none;
      }
    }

    &__download {
      @include size(50px, 50px);
      @include flex(center, center);
      margin-top: 6px;
      border-radius: 50%;
      opacity: 0;

      svg {
        @include size(20px, 20px);
      }

      svg * {
        fill: $deepBlue-40;
      }

      &:hover svg * {
        fill: $deepBlue-60;
      }
    }
  }

  &__description {
    color: $deepBlue-70;
    font-size: 13px;
    font-weight: 400;
    padding-left: 40px;
    padding-right: 18px;
    line-height: 18px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    max-height: 36px;      /* fallback */
    -webkit-line-clamp: 2; /* number of lines to show */
    -webkit-box-orient: vertical;

    a {
      word-break: break-all;
    }

    &:empty {
      display: none;
    }
  }

  &__preview {
		@include size(100%, auto);
    background-color: $blue-5;
    // border-top: 1px solid $deepBlue-10;
    // padding: 18px;

    &--no-style {
      padding: 0;
      background-color: transparent;

      .custom-html {
        width: 100%;
      }
    }

    &--video {
      @include flex(center, center);
			width: 100%;
      position: relative;
    }

		&--img {
      @include flex(center, center);
			width: 100%;
      position: relative;
		}
  }

  &:hover &__header &__header__download {
    opacity: 1;
  }
}

